# MafiaNet

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.md  README.md  SLikeNet.sln  mafianet-config-version.cmake.in
DependentExtensions/: CMakeLists.txt  RakVoice.cpp  RakVoice.h
DependentExtensions/Autopatcher/: ApplyPatch.cpp  AutopatcherClient.cpp  AutopatcherClient.h  AutopatcherServer.cpp  AutopatcherServer.h  CMakeLists.txt  CreatePatch.cpp
DependentExtensions/IrrlichtDemo/: .!90871!CMainMenu.cpp  CDemo.cpp  CDemo.h  CMainMenu.h  CMakeLists.txt  IrrlichtDemo.vcxproj  mafianetstuff.cpp  mafianetstuff.h  main.cpp  slikenetstuff.cpp  slikenetstuff.h
DependentExtensions/Lobby2/: CMakeLists.txt  Lobby2Client.cpp  Lobby2Client.h  Lobby2Message.cpp  Lobby2Message.h  Lobby2Plugin.cpp  Lobby2Plugin.h  Lobby2Presence.cpp  Lobby2Presence.h  Lobby2ResultCode.cpp  Lobby2ResultCode.h  Lobby2Server.cpp  Lobby2Server.h
DependentExtensions/MySQLInterface/: CMakeLists.txt  MySQLInterface.cpp  MySQLInterface.h
DependentExtensions/Ogre3DInterpDemo/: .!91184!RunnableState.cpp  .!91191!RunnableState.h  .!91197!AppInterface.h  App3D.cpp  AppInterface.cpp  CMakeLists.txt  FSM.cpp  FSM.h  Ogre3DInterpDemo.vcxproj  OverlayHelper.h  State.cpp  TransformationHistory.cpp  TransformationHistory.h  WinMain.cpp
DependentExtensions/PostgreSQLInterface/: .!90999!CMakeLists.txt  CMakeLists.txt  PostgreSQLInterface.cpp  PostgreSQLInterface.h
DependentExtensions/RPC3/: CMakeLists.txt  RPC3.cpp  RPC3.h  RPC3_Boost.h
DependentExtensions/Rackspace/: Rackspace2.cpp  Rackspace2.h
DependentExtensions/SQLImageBuffer/: SQLImageBuffer.vcxproj  SQLImageBuffer.vcxproj.filters
DependentExtensions/SQLite3Plugin/: SQLite3ClientPlugin.cpp  SQLite3ClientPlugin.h  SQLite3Plugin.vcxproj  SQLite3PluginCommon.cpp  SQLite3PluginCommon.h  SQLite3Sample.cpp  SQLite3ServerPlugin.cpp  SQLite3ServerPlugin.h
DependentExtensions/Swig/: MakeSwig.bat  MakeSwig.sh
DependentExtensions/WinRT/: .!90800!WinRTSockAddr.h  WinRTSockAddr.h
DependentExtensions/bzip2-1.0.6/: CMakeLists.txt
DependentExtensions/bzip2-1.0.8/: CMakeLists.txt
DependentExtensions/cat/: Platform.hpp
DependentExtensions/miniupnpc-1.5/: .!92630!declspec.h
DependentExtensions/portaudio_v18_1/: CMakeLists.txt
DependentExtensions/rnnoise/: CMakeLists.txt
DependentExtensions/speex-1.1.12/: CMakeLists.txt
Lib/LibStatic/: CMakeLists.txt  LibStatic.vcxproj  LibStatic.vcxproj.filters
Samples/: CMakeLists.txt
Samples/AutoPatcherServer_MySQL/: AutopatcherServerTest_MySQL.cpp  AutopatcherServer_MySQL.vcxproj  CMakeLists.txt
Samples/AutopatcherClient/: AutopatcherClient.vcxproj  AutopatcherClientTest.cpp  CMakeLists.txt
Samples/AutopatcherClientGFx3.0/: AutopatcherClientGFx3.0.vcxproj  AutopatcherClientGFx3Impl.cpp  AutopatcherClientGFx3Impl.h  CMakeLists.txt
Samples/AutopatcherClientRestarter/: AutopatcherClientRestarter.vcxproj  CMakeLists.txt  main.cpp
Samples/AutopatcherClient_SelfScaling/: AutopatcherClientTest.cpp  AutopatcherClient_SelfScaling.vcxproj
Samples/AutopatcherServer/: AutopatcherServer.vcxproj  AutopatcherServerTest.cpp  CMakeLists.txt
Samples/AutopatcherServer_SelfScaling/: AutopatcherServer_SelfScaling.vcxproj  AutopatcherServer_SelfScaling.vcxproj.filters  main.cpp
Samples/BigPacketTest/: BigPacketTest.cpp  BigPacketTest.vcxproj  CMakeLists.txt
Samples/BurstTest/: BurstTest.cpp  BurstTest.vcxproj  CMakeLists.txt
Samples/ChatExample/: CMakeLists.txt
Samples/CloudClient/: CMakeLists.txt  CloudClient.vcxproj  CloudClientSample.cpp
Samples/CloudServer/: CMakeLists.txt  CloudServer.vcxproj  CloudServerHelper.cpp  CloudServerHelper.h  CloudServerSample.cpp
Samples/CloudTest/: CMakeLists.txt  CloudTest.cpp  CloudTest.vcxproj
Samples/CommandConsoleClient/: CMakeLists.txt  CommandConsoleClient.vcxproj  main.cpp
Samples/CommandConsoleServer/: CMakeLists.txt  CommandConsoleServer.vcxproj  main.cpp
Samples/ComprehensivePCGame/: CMakeLists.txt  ComprehensivePCGame.cpp  ComprehensivePCGame.vcxproj  ComprehensivePCGame.vcxproj.filters
Samples/ComprehensiveTest/: CMakeLists.txt  ComprehensiveTest.cpp  ComprehensiveTest.vcxproj
Samples/CrashReporter/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.h  CrashReporter.vcxproj  SendFileTo.cpp  SendFileTo.h  main.cpp
Samples/CrossConnectionTest/: CMakeLists.txt  CrossConnectionTest.cpp  CrossConnectionTest.vcxproj
Samples/DirectoryDeltaTransfer/: CMakeLists.txt  DirectoryDeltaTransfer.cpp  DirectoryDeltaTransfer.vcxproj  DirectoryDeltaTransferTest.cpp
Samples/DroppedConnectionTest/: CMakeLists.txt  DroppedConnectionTest.cpp  DroppedConnectionTest.vcxproj
Samples/Encryption/: CMakeLists.txt  Encryption.cpp  Encryption.vcxproj
Samples/FCMHost/: CMakeLists.txt  FCM2Host.vcxproj  FCM2HostTest.cpp
Samples/FCMHostSimultaneous/: CMakeLists.txt  FCM2HostSimultaneous.vcxproj  FCM2HostSimultaneousTest.cpp
Samples/FCMVerifiedJoinSimultaneous/: CMakeLists.txt  FCM2VerifiedJoinSimultaneous.vcxproj  FCM2VerifiedJoinSimultaneousTest.cpp
Samples/FileListTransfer/: CMakeLists.txt  FileListTransfer.vcxproj  main.cpp
Samples/FlowControlTest/: CMakeLists.txt  FlowControlTest.cpp  FlowControlTest.vcxproj
Source/: AutopatcherPatchContext.h  AutopatcherRepositoryInterface.h  Base64Encoder.h  BitStream.h  CCRakNetSlidingWindow.h  CCRakNetUDT.h  CMakeLists.txt  CheckSum.h  CloudClient.h  CloudCommon.h  CloudServer.h  CommandParserInterface.h  ConnectionGraph2.h  ConsoleServer.h  DR_SHA1.h  DS_BPlusTree.h  DS_BinarySearchTree.h  DS_BytePool.h  DS_ByteQueue.h  DS_Hash.h  DS_Heap.h  DS_HuffmanEncodingTree.h  DS_HuffmanEncodingTreeFactory.h  DS_HuffmanEncodingTreeNode.h  DS_LinkedList.h  DS_List.h  DS_Map.h  DS_MemoryPool.h  DS_Multilist.h  DS_OrderedChannelHeap.h  DS_OrderedList.h  DS_Queue.h  DS_QueueLinkedList.h  DS_RangeList.h  DS_Table.h  DS_ThreadsafeAllocatingQueue.h  DS_Tree.h  DS_WeightedGraph.h  DataCompressor.h  DirectoryDeltaTransfer.h  (+115 more)
Tests/: CMakeLists.txt
(+869 files in other folders)
