# MafiaNet Samples
#
# Copyright (c) 2024, MafiaHub
# Licensed under MIT-style license

# Basic samples (no special dependencies)
add_subdirectory(BigPacketTest)
add_subdirectory(BurstTest)
add_subdirectory(ChatExample)
add_subdirectory(CloudClient)
add_subdirectory(CloudServer)
add_subdirectory(CloudTest)
add_subdirectory(CommandConsoleClient)
add_subdirectory(CommandConsoleServer)
add_subdirectory(ComprehensivePCGame)
add_subdirectory(ComprehensiveTest)
add_subdirectory(CrossConnectionTest)
add_subdirectory(DirectoryDeltaTransfer)
add_subdirectory(DroppedConnectionTest)
add_subdirectory(Encryption)
add_subdirectory(FCMHost)
add_subdirectory(FCMHostSimultaneous)
add_subdirectory(FCMVerifiedJoinSimultaneous)
add_subdirectory(FileListTransfer)
add_subdirectory(FlowControlTest)
add_subdirectory(FullyConnectedMesh)
add_subdirectory(LANServerDiscovery)
add_subdirectory(Lobby2Client)
add_subdirectory(MasterServer)
add_subdirectory(MessageFilter)
add_subdirectory(MessageSizeTest)
add_subdirectory(NATCompleteClient)
add_subdirectory(NATCompleteServer)
add_subdirectory(OfflineMessagesTest)
add_subdirectory(PacketLogger)
add_subdirectory(PHPDirectoryServer2)
add_subdirectory(Ping)
add_subdirectory(RackspaceConsole)
add_subdirectory(ReadyEvent)
add_subdirectory(RelayPluginTest)
add_subdirectory(ReliableOrderedTest)
add_subdirectory(ReplicaManager3)
add_subdirectory(Router2)
add_subdirectory(RPC4)
add_subdirectory(SendEmail)
add_subdirectory(ServerClientTest2)
add_subdirectory(StatisticsHistoryTest)
add_subdirectory(TeamManager)
add_subdirectory(Tests)
add_subdirectory(ThreadTest)
add_subdirectory(Timestamping)
add_subdirectory(TwoWayAuthentication)
add_subdirectory(UDPForwarder)

# Samples requiring autopatcher extension
add_subdirectory(AutopatcherClient)
add_subdirectory(AutopatcherClientRestarter)
add_subdirectory(AutopatcherServer)

# Samples requiring crash reporter extension
add_subdirectory(CrashReporter)

# Platform/third-party dependent samples (conditionally built)

# RPC3 requires Boost
find_package(Boost QUIET)
if(Boost_FOUND)
    add_subdirectory(RPC3)
endif()

# RakVoice samples require audio libraries
add_subdirectory(RakVoice)

# The following samples are disabled by default as they require
# specific third-party dependencies or platforms:
#
# - AutopatcherClientGFx3.0 (requires Scaleform GFx)
# - AutoPatcherServer_MySQL (requires MySQL)
# - CrashRelauncher (Windows-specific)
# - iOS (requires iOS SDK)
# - Lobby2ClientGFx3.0 (requires Scaleform GFx)
# - Lobby2Server_PGSQL (requires PostgreSQL)
# - Lobby3 (incomplete)
# - LobbyDB_PostgreSQL (requires PostgreSQL)
# - LoopbackPerformanceTest (specialized)
# - Marmalade (requires Marmalade SDK)
# - nacl_sdk (requires Native Client SDK)
# - RakVoiceDSound (requires DirectSound)
# - RakVoiceFMOD (requires FMOD)
# - RakVoiceFMODAsDLL (requires FMOD)
# - RankingServerDB (requires database)
# - RankingServerDBTest (requires database)
# - Rooms (incomplete)
# - RoomsBrowserGFx3 (requires Scaleform GFx)
# - SteamLobby (requires Steam SDK)
# - TitleValidationDB_PostgreSQL (requires PostgreSQL)
# - TestDLL (Windows DLL test)
